--- a/src/app.css
+++ b/src/app.css
@@ -1,15 +1,3 @@
-@import "tailwindcss";
-@plugin "@tailwindcss/forms";
-@plugin "@tailwindcss/typography";
-
-@font-face {
-	font-family: "StroyMono";
-	src: url("/fonts/StroyMonoTEST-Light.otf") format("opentype");
-	font-weight: 400;
-	font-style: normal;
-	font-display: swap;
-}
-
-@theme {
-	--font-mono: "StroyMono", sans-serif;
-}
+@import "./styles/reset.css";
+@import "./styles/typography.css";
+@import "./styles/base.css";
