--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -7,6 +7,7 @@
 	--small-font-size: clamp(0.875rem, 0.8462rem + 0.1282vw, 1rem);
 	--base-font-size: clamp(1rem, 0.9423rem + 0.2564vw, 1.25rem);
 	--border-weight: 1px;
+	--header-height: 8rem;
 }
 
 body {
@@ -18,6 +19,7 @@ body {
 	-webkit-font-smoothing: antialiased; /* Pour Safari et Chrome */
 	-moz-osx-font-smoothing: grayscale; /* Pour Firefox sur macOS */
 	text-rendering: optimizeLegibility;
+	overflow: hidden;
 }
 
 /* Container style */
@@ -77,4 +79,11 @@ body {
 ::selection {
 	color: var(--color-white);
 	background: rgba(0, 0, 0, 0.7);
+}
+
+.page {
+	height: calc(100svh - (var(--header-height) - var(--border-weight)));
+	position: relative;
+	top: calc(var(--border-weight) * -1);
+	background-color: var(--color-white);
 }
