--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -74,3 +74,19 @@ body {
 	top: calc(var(--border-weight) * -1);
 	background-color: var(--color-white);
 }
+
+@media screen and (max-width: 992px) {
+	:root {
+		--side-content-size: 3.5rem;
+		--btn-padding: 0.7rem;
+	}
+	.page {
+		height: calc(100svh - var(--side-content-size));
+	}
+}
+
+@media screen and (max-width: 576px) {
+	:root {
+		--container-padding: 2rem;
+	}
+}
