--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -78,10 +78,11 @@ a {
 }
 
 .page {
-	height: calc(100svh - var(--header-height) + (var(--border-weight) * 2));
-	top: calc(var(--border-weight) * -2);
+	height: calc(100svh + var(--border-weight) - var(--header-height));
+	top: calc(var(--border-weight) * -1);
 	position: relative;
 	background-color: var(--color-white);
+	overflow: auto;
 }
 
 @media screen and (max-width: 992px) {
@@ -90,7 +91,7 @@ a {
 		--btn-padding: 0.7rem;
 	}
 	.page {
-		height: calc(100svh - var(--side-content-size) + (var(--border-weight) * 2));
+		height: calc(100svh + (var(--border-weight) * 2) - var(--side-content-size));
 	}
 	.btn-decorated {
 		font-size: 16px;
